# comicplex

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
src/comicplex/: __init__.py  cli.py  config.py  db.py  filename_parser.py  metadata_comicvine.py  models.py  scanner.py  tagger.py  views.py
