[build-system]
requires = ["setuptools", "wheel"]


[project]
name = "comicplex"
version = "0.1.0"
description = "Plex-style organizer for your digital comics library."
authors = [{name = "You"}]
requires-python = ">=3.10"
dependencies = [
"typer>=0.12",
"pydantic>=2.6",
"sqlmodel>=0.0.16",
"httpx>=0.27",
"requests-cache>=1.2",
"rapidfuzz>=3.9",
"rich>=13.7",
"ruamel.yaml>=0.18",
]


[project.optional-dependencies]
dev = [
"pytest>=8.2",
"coverage>=7.6",
"black>=24.4",
"ruff>=0.4",
"mypy>=1.10",
]


[project.scripts]
comicplex = "comicplex.cli:app"
